{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 29,
  "lineage": "ee3daae4-e86d-06ff-e428-2cba3cf04a67",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:018874676986:loadbalancer/DEV-20200113002547530400000001",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "DEV-20200113002547530400000001-1023249160.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "DEV-20200113002547530400000001",
            "idle_timeout": 60,
            "instances": [
              "i-00051e6732667e259",
              "i-0db898894e5ac9fed"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "DEV-20200113002547530400000001",
            "name_prefix": "DEV-",
            "security_groups": [
              "sg-0671bb4e413f13a7a"
            ],
            "source_security_group": "018874676986/LoadBalancerSG",
            "source_security_group_id": "sg-0671bb4e413f13a7a",
            "subnets": [
              "subnet-02d639220d7a672e6",
              "subnet-032c1fe3d4929541e"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.WEB_A",
            "aws_instance.WEB_B",
            "aws_key_pair.keypair",
            "aws_security_group.LoadBalancerSG",
            "aws_security_group.WebserverSG",
            "aws_security_group.bastionhostSG",
            "aws_subnet.public-web-az-a",
            "aws_subnet.public-web-az-b",
            "aws_vpc.vpc",
            "tls_private_key.privkey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "BASTIONHOST_A",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-cfe4b2b0",
            "arn": "arn:aws:ec2:us-east-1:018874676986:instance/i-0a0870cd391b2e8c4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0a0870cd391b2e8c4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0b9f3e7ccfa01d3a8",
            "private_dns": "ip-10-0-1-14.ec2.internal",
            "private_ip": "10.0.1.14",
            "public_dns": "ec2-3-92-205-93.compute-1.amazonaws.com",
            "public_ip": "3.92.205.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08c093dde06af91ab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-032c1fe3d4929541e",
            "tags": {
              "Environment": "DEV",
              "Name": "DEV-BASTION001",
              "sshUser": "ubuntu"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00307d1f9d11021d4"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.bastionhostSG",
            "aws_subnet.public-web-az-a",
            "aws_vpc.vpc",
            "tls_private_key.privkey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "BASTIONHOST_B",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-cfe4b2b0",
            "arn": "arn:aws:ec2:us-east-1:018874676986:instance/i-0ffb85a0e20d75c5f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ffb85a0e20d75c5f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "monitoring": false,
            "primary_network_interface_id": "eni-06f11db37614bb2d9",
            "private_dns": "ip-10-0-2-252.ec2.internal",
            "private_ip": "10.0.2.252",
            "public_dns": "ec2-52-91-161-214.compute-1.amazonaws.com",
            "public_ip": "52.91.161.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00012bc6a4d22ba8a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d639220d7a672e6",
            "tags": {
              "Environment": "DEV",
              "Name": "DEV-BASTION002",
              "sshUser": "ubuntu"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00307d1f9d11021d4"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.bastionhostSG",
            "aws_subnet.public-web-az-b",
            "aws_vpc.vpc",
            "tls_private_key.privkey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SQL_A",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-cfe4b2b0",
            "arn": "arn:aws:ec2:us-east-1:018874676986:instance/i-02f38194c7c916baa",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-02f38194c7c916baa",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "monitoring": false,
            "primary_network_interface_id": "eni-083167bdf7b53c424",
            "private_dns": "ip-10-0-3-135.ec2.internal",
            "private_ip": "10.0.3.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a92d5cec515d4b19",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c68a778b8822697d",
            "tags": {
              "Environment": "DEV",
              "Name": "DEV-SQL001",
              "sshUser": "ubuntu"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0046c8ca7a255ed81"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.DBServerSG",
            "aws_security_group.WebserverSG",
            "aws_security_group.bastionhostSG",
            "aws_subnet.private-db-az-a",
            "aws_vpc.vpc",
            "tls_private_key.privkey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SQL_B",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-cfe4b2b0",
            "arn": "arn:aws:ec2:us-east-1:018874676986:instance/i-093b8ec8dc41ae150",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-093b8ec8dc41ae150",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "monitoring": false,
            "primary_network_interface_id": "eni-07fd765138cf534c1",
            "private_dns": "ip-10-0-4-54.ec2.internal",
            "private_ip": "10.0.4.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d336ff9eb52b60cd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0be825e0215f000b2",
            "tags": {
              "Environment": "DEV",
              "Name": "DEV-SQL002",
              "sshUser": "ubuntu"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0046c8ca7a255ed81"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.DBServerSG",
            "aws_security_group.WebserverSG",
            "aws_security_group.bastionhostSG",
            "aws_subnet.private-db-az-b",
            "aws_vpc.vpc",
            "tls_private_key.privkey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WEB_A",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-cfe4b2b0",
            "arn": "arn:aws:ec2:us-east-1:018874676986:instance/i-00051e6732667e259",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-00051e6732667e259",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0e90d5caad4d5fa67",
            "private_dns": "ip-10-0-1-241.ec2.internal",
            "private_ip": "10.0.1.241",
            "public_dns": "ec2-52-71-8-110.compute-1.amazonaws.com",
            "public_ip": "52.71.8.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e4589177d77013ec",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-032c1fe3d4929541e",
            "tags": {
              "Environment": "DEV",
              "Name": "DEV-WEB001",
              "sshUser": "ubuntu"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09f6e0c09d820a1cb"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.WebserverSG",
            "aws_security_group.bastionhostSG",
            "aws_subnet.public-web-az-a",
            "aws_vpc.vpc",
            "tls_private_key.privkey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WEB_B",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-cfe4b2b0",
            "arn": "arn:aws:ec2:us-east-1:018874676986:instance/i-0db898894e5ac9fed",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0db898894e5ac9fed",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "monitoring": false,
            "primary_network_interface_id": "eni-08defd43398f87fc6",
            "private_dns": "ip-10-0-2-79.ec2.internal",
            "private_ip": "10.0.2.79",
            "public_dns": "ec2-18-208-194-8.compute-1.amazonaws.com",
            "public_ip": "18.208.194.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-056c53bd34a98c8e7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d639220d7a672e6",
            "tags": {
              "Environment": "DEV",
              "Name": "DEV-WEB002",
              "sshUser": "ubuntu"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09f6e0c09d820a1cb"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.WebserverSG",
            "aws_security_group.bastionhostSG",
            "aws_subnet.public-web-az-b",
            "aws_vpc.vpc",
            "tls_private_key.privkey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "inetgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0cadd2db5b7b3e72d",
            "owner_id": "018874676986",
            "tags": {
              "Name": "IGW-VPC-DEV-Default"
            },
            "vpc_id": "vpc-0acc24fe745a8886b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us-default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a2cb7ac2445bb575",
            "owner_id": "018874676986",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cadd2db5b7b3e72d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route-Table-US-Default"
            },
            "vpc_id": "vpc-0acc24fe745a8886b"
          },
          "dependencies": [
            "aws_internet_gateway.inetgw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-east-1a-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a75cbd84e1ff8682",
            "route_table_id": "rtb-0a2cb7ac2445bb575",
            "subnet_id": "subnet-0c68a778b8822697d"
          },
          "dependencies": [
            "aws_internet_gateway.inetgw",
            "aws_route_table.us-default",
            "aws_subnet.private-db-az-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-east-1a-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0437dca8278beb37a",
            "route_table_id": "rtb-0a2cb7ac2445bb575",
            "subnet_id": "subnet-032c1fe3d4929541e"
          },
          "dependencies": [
            "aws_internet_gateway.inetgw",
            "aws_route_table.us-default",
            "aws_subnet.public-web-az-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-east-1b-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056a493196c894339",
            "route_table_id": "rtb-0a2cb7ac2445bb575",
            "subnet_id": "subnet-0be825e0215f000b2"
          },
          "dependencies": [
            "aws_internet_gateway.inetgw",
            "aws_route_table.us-default",
            "aws_subnet.private-db-az-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-east-1b-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c6764ef765078aa",
            "route_table_id": "rtb-0a2cb7ac2445bb575",
            "subnet_id": "subnet-02d639220d7a672e6"
          },
          "dependencies": [
            "aws_internet_gateway.inetgw",
            "aws_route_table.us-default",
            "aws_subnet.public-web-az-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DBServerSG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018874676986:security-group/sg-0046c8ca7a255ed81",
            "description": "Security group for database servers",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3128,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00307d1f9d11021d4"
                ],
                "self": false,
                "to_port": 3128
              }
            ],
            "id": "sg-0046c8ca7a255ed81",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow incoming ICMP from management IPs",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-00307d1f9d11021d4"
                ],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "Allow incoming MySQL traffic from webservers",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f6e0c09d820a1cb"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Allow incoming SSH traffic from Bastion Host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00307d1f9d11021d4"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "DBServerSG",
            "name_prefix": null,
            "owner_id": "018874676986",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-DBServer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acc24fe745a8886b"
          },
          "dependencies": [
            "aws_security_group.WebserverSG",
            "aws_security_group.bastionhostSG",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LoadBalancerSG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018874676986:security-group/sg-0671bb4e413f13a7a",
            "description": "Security group for load-balancers",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f6e0c09d820a1cb"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f6e0c09d820a1cb"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0671bb4e413f13a7a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTP traffic from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTPS traffic from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "LoadBalancerSG",
            "name_prefix": null,
            "owner_id": "018874676986",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Loadbalancer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acc24fe745a8886b"
          },
          "dependencies": [
            "aws_security_group.WebserverSG",
            "aws_security_group.bastionhostSG",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WebserverSG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018874676986:security-group/sg-09f6e0c09d820a1cb",
            "description": "Security group for webservers",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3128,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00307d1f9d11021d4"
                ],
                "self": false,
                "to_port": 3128
              }
            ],
            "id": "sg-09f6e0c09d820a1cb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow incoming ICMP from management IPs",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-00307d1f9d11021d4"
                ],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "Allow incoming SSH traffic from Bastion Host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00307d1f9d11021d4"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "WebserverSG",
            "name_prefix": null,
            "owner_id": "018874676986",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-WebServer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acc24fe745a8886b"
          },
          "dependencies": [
            "aws_security_group.bastionhostSG",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastionhostSG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018874676986:security-group/sg-00307d1f9d11021d4",
            "description": "Security group for bastion hosts",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00307d1f9d11021d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming ICMP from management IPs",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming SSH from management IPs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "BastionHostSG",
            "name_prefix": null,
            "owner_id": "018874676986",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Bastionhost"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acc24fe745a8886b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dbproxyaccess",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Squid proxy access from database servers",
            "from_port": 3128,
            "id": "sgrule-4114351422",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00307d1f9d11021d4",
            "self": false,
            "source_security_group_id": "sg-0046c8ca7a255ed81",
            "to_port": 3128,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.DBServerSG",
            "aws_security_group.WebserverSG",
            "aws_security_group.bastionhostSG",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lbhttpaccess",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Squid proxy access from loadbalancers",
            "from_port": 80,
            "id": "sgrule-249654880",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09f6e0c09d820a1cb",
            "self": false,
            "source_security_group_id": "sg-0671bb4e413f13a7a",
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.LoadBalancerSG",
            "aws_security_group.WebserverSG",
            "aws_security_group.bastionhostSG",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lbhttpsaccess",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Squid proxy access from loadbalancers",
            "from_port": 443,
            "id": "sgrule-1394390808",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09f6e0c09d820a1cb",
            "self": false,
            "source_security_group_id": "sg-0671bb4e413f13a7a",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.LoadBalancerSG",
            "aws_security_group.WebserverSG",
            "aws_security_group.bastionhostSG",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "webproxyaccess",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Squid proxy access from webservers",
            "from_port": 3128,
            "id": "sgrule-1165097919",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00307d1f9d11021d4",
            "self": false,
            "source_security_group_id": "sg-09f6e0c09d820a1cb",
            "to_port": 3128,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.WebserverSG",
            "aws_security_group.bastionhostSG",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-db-az-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018874676986:subnet/subnet-0c68a778b8822697d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0c68a778b8822697d",
            "map_public_ip_on_launch": false,
            "owner_id": "018874676986",
            "tags": {
              "Name": "Subnet-US-East-1a-DB"
            },
            "vpc_id": "vpc-0acc24fe745a8886b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-db-az-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018874676986:subnet/subnet-0be825e0215f000b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0be825e0215f000b2",
            "map_public_ip_on_launch": false,
            "owner_id": "018874676986",
            "tags": {
              "Name": "Subnet-US-East-1b-DB"
            },
            "vpc_id": "vpc-0acc24fe745a8886b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-web-az-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018874676986:subnet/subnet-032c1fe3d4929541e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-032c1fe3d4929541e",
            "map_public_ip_on_launch": true,
            "owner_id": "018874676986",
            "tags": {
              "Name": "Subnet-US-East-1a-Web"
            },
            "vpc_id": "vpc-0acc24fe745a8886b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-web-az-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018874676986:subnet/subnet-02d639220d7a672e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-02d639220d7a672e6",
            "map_public_ip_on_launch": true,
            "owner_id": "018874676986",
            "tags": {
              "Name": "Subnet-US-East-1b-Web"
            },
            "vpc_id": "vpc-0acc24fe745a8886b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018874676986:vpc/vpc-0acc24fe745a8886b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08e2d38a237850a9e",
            "default_route_table_id": "rtb-0fedb1286abb067cc",
            "default_security_group_id": "sg-08e4ba17473a53286",
            "dhcp_options_id": "dopt-1b3c3760",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0acc24fe745a8886b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fedb1286abb067cc",
            "owner_id": "018874676986",
            "tags": {
              "Name": "VPC-DEV"
            }
          }
        }
      ]
    }
  ]
}